vemo-app/main/default/objects/AttendancePeriod__c/AttendancePeriod__c.object-meta.xml
<CustomObject>
    <label>Attendance Period</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Attendance Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>