vemo-app/main/default/objects/AttendancePeriod__c/fields/AttendanceBeginDate__c.field-meta.xml
<CustomField>
    <fullName>AttendanceBeginDate__c</fullName>
    <label>Attendance Begin Date</label>
    <type>Date</type>
</CustomField>